--- a/css/style.css
+++ b/css/style.css
@@ -15488,7 +15488,6 @@ textarea.form-control {
 .sign-in {
   font-family: 'Poppins', sans-serif;
   height: 100vh;
-  border: 1px solid black;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15630,4 +15629,30 @@ textarea.form-control {
 /* Register Page */
 .sign-in .form .submit {
   margin-top: 5px;
+}
+
+/* Admin Page */
+.search-area {
+  border: 1px solid black;
+  margin-top: 35px;
+  /* background-color: #dbcc8f; */
+}
+
+.search-admin {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.table-admin {
+  display: flex;
+  justify-content: center;
+  margin: 50px 0;
+  height: 100%;
+}
+
+.table-admin table th,
+td {
+  text-align: center;
+  padding: 10px 20px;
 }
