Update Front End
1. nambah titik di harga produk tiap rebuan
2. nambahin fungsi kategori
3. ngehubungi beloved product di home page ke single product page

--- a/css/style3.css
+++ b/css/style3.css
@@ -29,6 +29,19 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5) !important;
 }
 
+.panel-heading a {
+    color: #000000;
+}
+
+.panel-heading a::after {
+    all: unset;
+}
+
+.productC {
+    cursor: pointer;
+    font-size: 12px;
+}
+
 /* Single-Product */
 .nav-pills .nav-link {
     width: 100%;
