--- a/css/style3.css
+++ b/css/style3.css
@@ -63,3 +63,51 @@
     color: #000000 !important;
     font-weight: 500;
 }
+
+/* All Page */
+.profile-icon {
+    font-size: 14px;
+}
+
+/* Profile Page */
+.profile-form .form-control {
+    font-weight: 600;
+    color: #000000 !important;
+}
+
+.profile-form .textarea {
+    width: 100%;
+}
+
+.profile-form textarea {
+    width: 100%;
+    padding: 20px 15px;
+}
+
+.btn-update-profil {
+    margin-top: 20px;
+}
+
+.update-profil {
+    border: 1px solid #dbcc8f;
+    background-color: #dbcc8f;
+    color: #fff;
+    padding: 15px;
+    transition: 0.3s ease-in-out;
+}
+
+.btn-update-profil a:hover {
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.5);
+    color: #fff;
+}
+
+.btn-update-profil p {
+    margin-top: -12px;
+    visibility: hidden;
+}
+
+/* Update Profil Page */
+.btn-update-profil2 p {
+    margin-top: -25px;
+    visibility: hidden;
+}
